--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -1,3 +1,45 @@
 * {
   box-sizing: border-box;
 }
+
+.side_ber {
+  background-color: #253141;
+  width: 300px;
+  height: 100vh;
+  &__user_name {
+    background-color: #253141;
+    width: 300px;
+    height: 100px;
+  }
+  &__group_list {
+    background-color: #2f3e51;
+    width: 300px;
+    height: calc(100vh - 100px);
+  }
+}
+
+.chat_main {
+  background-color: #ffffff;
+  width: calc(100vw - 300px);
+  height: 100vh;
+  &__group_list {
+    background-color: #ffffff;
+    border-bottom: 1px solid #eeeeee;
+    width: calc(100vw - 300px);
+    height: 100px;
+  }
+  &__message_list {
+    background-color: #fafafa;
+    width: calc(100vw - 300px);
+    height: calc(100vh - 190px);
+  }
+  &__message_form {
+    background-color: #d2d2d2;
+    width: calc(100vw - 300px);
+    height: 90px;
+  }
+}
+
+.wrapper {
+  display: flex
+}
