--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,5 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "modules/messages";
+@import "modules/side_ber";
+@import "modules/chat_main";
