--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,4 +1,4 @@
 .chat_main
-  .chat_main__group_list
-  .chat_main__message_list
-  .chat_main__message_form
+  .chat-main__group-list
+  .chat-main__message-list
+  .chat-main__message-form
