--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,3 +1,8 @@
 .side-ber
   .side-ber__user-name
+    .top-items
+      .top-items__name
+        suzuki
+      .top-items__icons
+
   .side-ber__group-list
