--- a/app/assets/stylesheets/modules/_side_ber.scss
+++ b/app/assets/stylesheets/modules/_side_ber.scss
@@ -6,7 +6,25 @@
     background-color: #253141;
     width: 300px;
     height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .top-items {
+      background-color: #d8d8d8d8;
+      width: 260px;
+      height: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      &__name {
+
+      }
+      &__icons {
+        width: 60px;
+      }
+    }
   }
+
   &__group-list {
     background-color: #2f3e51;
     width: 300px;
