--- a/app/assets/stylesheets/modules/_chat_main.scss
+++ b/app/assets/stylesheets/modules/_chat_main.scss
@@ -2,12 +2,43 @@
   background-color: #ffffff;
   width: calc(100vw - 300px);
   height: 100vh;
-  &__group-list {
+  &__group-info {
     background-color: #ffffff;
     border-bottom: 1px solid #eeeeee;
     width: calc(100vw - 300px);
     height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 40px;
+    .group {
+      &__name {
+        color: #333;
+        font-size: 20px;
+        margin-top: 35px;
+      }
+      &__memberlist {
+        color: #999;
+        display: flex;
+        font-size: 12px;
+        margin-top: 15px;
+        list-style: none;
+        &__member {
+          padding-right: 5px;
+        }
+      }
+    }
+    .edit-btn {
+      display: block;
+      border: 1px solid #38aef0;
+      color: #38aef0;
+      height: 40px;
+      margin-top: 28px;
+      padding: 0 20px;
+      text-decoration: none;
+      line-height: 40px;
+    }
   }
+
   &__message-list {
     background-color: #fafafa;
     width: calc(100vw - 300px);
