--- a/app/assets/stylesheets/modules/_chat_main.scss
+++ b/app/assets/stylesheets/modules/_chat_main.scss
@@ -12,18 +12,18 @@
     padding: 0 40px;
     .group {
       &__name {
-        color: #333;
+        color: #333333;
         font-size: 20px;
         margin-top: 35px;
       }
       &__memberlist {
-        color: #999;
+        color: #999999;
         display: flex;
         font-size: 12px;
         margin-top: 15px;
         list-style: none;
         &__member {
-          padding-right: 5px;
+          font-size: 13px;
         }
       }
     }
@@ -38,15 +38,72 @@
       line-height: 40px;
     }
   }
-
   &__message-list {
     background-color: #fafafa;
     width: calc(100vw - 300px);
     height: calc(100vh - 190px);
+    padding: 35px 40px;
+    .messagebox {
+      margin-bottom: 46px;
+      &__namedate {
+        display: flex;
+        &__name {
+          color: #333333;
+          font-size: 16px;
+          font-weight: bold;
+        }
+        &__date {
+          color: #999999;
+          font-size: 12px;
+          padding-left: 10px;
+        }
+      }
+      &__text {
+        color: #434a54;
+        font-size: 14px;
+        margin-top: 12px;
+      }
+    }
   }
+
   &__message-form {
     background-color: #d2d2d2;
     width: calc(100vw - 300px);
     height: 90px;
+    padding: 20px 50px 20px 40px;
+    .content {
+      display: flex;
+      justify-content: space-between;
+      &__contents {
+        width: 100%;
+        background-color: #ffffff;
+        position: relative;
+        &__message {
+          border: none;
+          height: 50px;
+          width: 100%;
+          padding: 0 45px 0 15px;
+        }
+        &__image {
+          height: 50px;
+          position: absolute;
+          right: 10px;
+          top: 5px;
+          font-size: 1.5em;
+          &__icon {
+            display: none;
+          }
+        }
+      }
+      .submit {
+        background-color: #38aef0;
+        border: none;
+        color: #ffffff;
+        font-size: 16px;
+        height: 50px;
+        margin-left: 15px;
+        padding: 0 30px;
+      }
+    }
   }
 }
