--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .side-ber__user-name
     .top-items
       .top-items__name
-        suzuki
+        = current_user.name
       .top-items__icons
         =link_to "#", class: "top-items__btn" do
           = icon('far', 'edit', class: "top-items__btn--icon")
-        =link_to "#", class: "top-items__btn" do
+        =link_to edit_user_path(current_user), class: "top-items__btn" do
           = icon('fa', 'cog', class: "top-items__btn--icon")
 
   .side-ber__group-list
