--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,7 +4,7 @@
       .top-items__name
         = current_user.name
       .top-items__icons
-        =link_to "#", class: "top-items__btn" do
+        =link_to new_group_path(current_user), class: "top-items__btn" do
           = icon('far', 'edit', class: "top-items__btn--icon")
         =link_to edit_user_path(current_user), class: "top-items__btn" do
           = icon('fa', 'cog', class: "top-items__btn--icon")
