--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,5 @@
 @import "modules/side_ber";
 @import "modules/chat_main";
 @import "modules/user";
-@import "modules/flash"
+@import "modules/flash";
+@import "modules/group";
