--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,8 +12,8 @@
   .side-ber__group-list
     - current_user.groups.each do |group|
       .group
-        =link_to "#", class: "group a" do
+        =link_to group_messages_path(group), class: "group a" do
           .group__name
             = group.name
           .group__message
-            まだメッセージはありません。
+            = group.show_last_message
