--- a/app/assets/stylesheets/modules/_chat_main.scss
+++ b/app/assets/stylesheets/modules/_chat_main.scss
@@ -24,6 +24,7 @@
         list-style: none;
         &__member {
           font-size: 13px;
+          padding-right: 5px;
         }
       }
     }
