--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.messagebox
+.messagebox{data: {message: {id: message.id}}}
   .messagebox__namedate
     .messagebox__namedate__name
       = message.user.name
